Fixed test compilation warnings