@@ -148,7 +148,8 @@ public class Runner {
 
             String testLogDir = logDir.isEmpty() ? null : logDir + '/' + testName;
             try (TestProcess p = new TestProcess(test, currentOs, testLogDir)) {
-                Object holder = (m.getModifiers() & Modifier.STATIC) == 0 ? m.getDeclaringClass().newInstance() : null;
+                Object holder = (m.getModifiers() & Modifier.STATIC) == 0 ?
+                        m.getDeclaringClass().getDeclaredConstructor().newInstance() : null;
                 m.invoke(holder, p);
                 log.info("OK");
             } catch (InvocationTargetException e) {
